external-orders/force-app/main/default/objects/Sales_Order__c/fields/Account_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Address__c</fullName>
    <formula>Account_ID__r.ShippingStreet &amp; &quot;, &quot; &amp;  Account_ID__r.ShippingCity &amp; &quot; &quot; &amp;  Account_ID__r.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>