external-orders/force-app/main/default/objects/Sales_Order__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order_Account</relationshipName>
    <type>Lookup</type>
</CustomField>