external-orders/force-app/main/default/objects/Sales_Order__c/fields/Account_No_Name_City__c.field-meta.xml
<CustomField>
    <fullName>Account_No_Name_City__c</fullName>
    <formula>Account_ID__r.Account_Number_and_Name__c + &quot; (&quot; +  Account_ID__r.ShippingCity + &quot;, &quot; +  Account_ID__r.ShippingState + &quot;)&quot;</formula>
    <label>Account No./Name/City</label>
    <type>Text</type>
</CustomField>