external-orders/force-app/main/default/objects/Sales_Order__c/fields/Alt_Address_Ind__c.field-meta.xml
<CustomField>
    <fullName>Alt_Address_Ind__c</fullName>
    <inlineHelpText>A Non-SAP Origin order had an alternate shipping address.</inlineHelpText>
    <label>Alt Address or Drop Ship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>