external-orders/force-app/main/default/objects/Sales_Order__c/fields/B2B_Eligible_for_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>B2B_Eligible_for_Onboarding__c</fullName>
    <formula>Account_ID__r.Parent.Eligible_for_B2B_Use__c</formula>
    <label>B2B: Eligible for Onboarding</label>
    <type>Checkbox</type>
</CustomField>