external-orders/force-app/main/default/objects/Sales_Order__c/fields/B2B_Ever_Logged_In__c.field-meta.xml
<CustomField>
    <fullName>B2B_Ever_Logged_In__c</fullName>
    <formula>Account_ID__r.Parent.Ever_Logged_Into_B2B__c</formula>
    <inlineHelpText>Has this Account Ever Logged into B2B?</inlineHelpText>
    <label>B2B: Ever Logged In?</label>
    <type>Checkbox</type>
</CustomField>