external-orders/force-app/main/default/objects/Sales_Order__c/fields/B2B_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>B2B_Order_ID__c</fullName>
    <description>B2B Unique ID for Sales Order</description>
    <inlineHelpText>B2B Unique ID for Sales Order</inlineHelpText>
    <label>B2B Order ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>