external-orders/force-app/main/default/objects/Sales_Order__c/fields/Calendar_Year__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Year__c</fullName>
    <formula>Text(Year( Created_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Year</label>
    <type>Text</type>
</CustomField>