external-orders/force-app/main/default/objects/Sales_Order__c/fields/Change_Age_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Change_Age_In_Months__c</fullName>
    <formula>((TODAY() -  Change_Date__c )/30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Change Age In Months</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>