external-orders/force-app/main/default/objects/Sales_Order__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <description>Date order was changed in B2B</description>
    <inlineHelpText>Date order was changed in B2B</inlineHelpText>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>