external-orders/force-app/main/default/objects/Sales_Order__c/fields/Create_Age_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Create_Age_in_Days__c</fullName>
    <formula>((TODAY() - datevalue(CreatedDate) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Age in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>