external-orders/force-app/main/default/objects/Sales_Order__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Date order was added to B2B</description>
    <inlineHelpText>Date order was added to B2B</inlineHelpText>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>