external-orders/force-app/main/default/objects/Sales_Order__c/fields/Credit_Rep__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rep__c</fullName>
    <formula>Account_ID__r.Credit_Rep_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Rep</label>
    <type>Text</type>
</CustomField>