external-orders/force-app/main/default/objects/Sales_Order__c/fields/Date_Semimonthly__c.field-meta.xml
<CustomField>
    <fullName>Date_Semimonthly__c</fullName>
    <description>Date text field for reporting purposes</description>
    <inlineHelpText>YYYY-MM-H where H = 1 for 1st half and 2 for 2nd half</inlineHelpText>
    <label>Year-Half-month</label>
    <length>9</length>
    <type>Text</type>
</CustomField>