external-orders/force-app/main/default/objects/Sales_Order__c/fields/Dealer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Segment__c</fullName>
    <label>Dealer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dealer_Segment_Types</valueSetName>
    </valueSet>
</CustomField>