external-orders/force-app/main/default/objects/Sales_Order__c/fields/Detail_Updated__c.field-meta.xml
<CustomField>
    <fullName>Detail_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies if the details of the order have been updated</inlineHelpText>
    <label>Detail Updated</label>
    <type>Checkbox</type>
</CustomField>