external-orders/force-app/main/default/objects/Sales_Order__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(  MONTH( Created_Date__c ) &gt;3, text(YEAR(Created_Date__c)) , text(YEAR(Created_Date__c)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>