external-orders/force-app/main/default/objects/Sales_Order__c/fields/FY_Quarter__c.field-meta.xml
<CustomField>
    <fullName>FY_Quarter__c</fullName>
    <description>Date text field for reporting purposes</description>
    <label>FY-Quarter</label>
    <length>7</length>
    <type>Text</type>
</CustomField>