external-orders/force-app/main/default/objects/Sales_Order__c/fields/Is_B2B_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_B2B_Order__c</fullName>
    <formula>if( ISPICKVAL( Origin__c , &quot;SAP&quot;) , False, True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is B2B  Order</label>
    <type>Checkbox</type>
</CustomField>