external-orders/force-app/main/default/objects/Sales_Order__c/fields/Is_SAP_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_SAP_Order__c</fullName>
    <formula>if( ISPICKVAL( Origin__c , &quot;SAP&quot;) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is SAP Order</label>
    <type>Checkbox</type>
</CustomField>