external-orders/force-app/main/default/objects/Sales_Order__c/fields/Label_Payer_No_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Payer_No_Name__c</fullName>
    <formula>Payer_ID__r.Name &amp; &quot; - &quot; &amp;  Payer_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Label - Payer No &amp; Name</label>
    <type>Text</type>
</CustomField>