external-orders/force-app/main/default/objects/Sales_Order__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <description>SAP Order Number</description>
    <inlineHelpText>SAP Order Number</inlineHelpText>
    <label>Order No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>