external-orders/force-app/main/default/objects/Sales_Order__c/fields/Order_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Status__c</fullName>
    <label>Order Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Order_Status</valueSetName>
    </valueSet>
</CustomField>