external-orders/force-app/main/default/objects/Sales_Order__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Type of order as defined in SAP and B2B</description>
    <inlineHelpText>Type of order as defined in SAP and B2B</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SAP_Order_Types</valueSetName>
    </valueSet>
</CustomField>