external-orders/force-app/main/default/objects/Sales_Order__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>Where the order came from</description>
    <inlineHelpText>Where the order came from</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>B2B_Order_Origin</valueSetName>
    </valueSet>
</CustomField>