external-orders/force-app/main/default/objects/Sales_Order__c/fields/Payer_ID__c.field-meta.xml
<CustomField>
    <fullName>Payer_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Head Office and A/R account holder in SAP</inlineHelpText>
    <label>Payer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order (Payer ID)</relationshipLabel>
    <relationshipName>Sales_Order_Payer</relationshipName>
    <type>Lookup</type>
</CustomField>