external-orders/force-app/main/default/objects/Sales_Order__c/fields/Payer_No__c.field-meta.xml
<CustomField>
    <fullName>Payer_No__c</fullName>
    <label>Payer No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>