external-orders/force-app/main/default/objects/Sales_Order__c/fields/PO_No__c.field-meta.xml
<CustomField>
    <fullName>PO_No__c</fullName>
    <description>Customer&apos;s Purchase Order number</description>
    <inlineHelpText>Customer&apos;s Purchase Order number</inlineHelpText>
    <label>PO No</label>
    <length>65</length>
    <type>Text</type>
</CustomField>