external-orders/force-app/main/default/objects/Sales_Order__c/fields/Preorder_No__c.field-meta.xml
<CustomField>
    <fullName>Preorder_No__c</fullName>
    <description>B2B Preorder Number</description>
    <inlineHelpText>B2B Preorder Number</inlineHelpText>
    <label>Preorder No</label>
    <length>25</length>
    <type>Text</type>
</CustomField>