external-orders/force-app/main/default/objects/Sales_Order__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to fire trigger; set to true in order to fire trigger; trigger automatically clears this flag back to false.</description>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>