external-orders/force-app/main/default/objects/Sales_Order__c/fields/Profit_Centre__c.field-meta.xml
<CustomField>
    <fullName>Profit_Centre__c</fullName>
    <label>Profit Centre</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Order_Profit_Centers</valueSetName>
    </valueSet>
</CustomField>