external-orders/force-app/main/default/objects/Sales_Order__c/fields/Promos_Applied__c.field-meta.xml
<CustomField>
    <fullName>Promos_Applied__c</fullName>
    <description>Promotional Engine rules that were applied to the order</description>
    <inlineHelpText>Promotional Engine rules that were applied to the order</inlineHelpText>
    <label>Promos Applied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>