external-orders/force-app/main/default/objects/Sales_Order__c/fields/SAP_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Type__c</fullName>
    <inlineHelpText>Original SAP Sales Order Type Code</inlineHelpText>
    <label>SAP Order Type</label>
    <length>6</length>
    <type>Text</type>
</CustomField>