external-orders/force-app/main/default/objects/Sales_Order__c/fields/Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Submitted_by__c</fullName>
    <description>Name of login account that submitted the order</description>
    <inlineHelpText>Name of login account that submitted the order</inlineHelpText>
    <label>Submitted by</label>
    <length>65</length>
    <type>Text</type>
</CustomField>