external-orders/force-app/main/default/objects/Sales_Order__c/fields/Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Discount__c</fullName>
    <description>Total Value of all Discounts on the order</description>
    <inlineHelpText>Total Value of all Discounts on the order</inlineHelpText>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>