external-orders/force-app/main/default/objects/Sales_Order__c/fields/Total_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Items__c</fullName>
    <description>Total Number of Line Items</description>
    <inlineHelpText>Total Number of Line Items</inlineHelpText>
    <label>Total Line Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>