external-orders/force-app/main/default/objects/Sales_Order__c/fields/Total_Order__c.field-meta.xml
<CustomField>
    <fullName>Total_Order__c</fullName>
    <description>Total Value of Order</description>
    <inlineHelpText>Total Value of Order</inlineHelpText>
    <label>*D* Total Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>