external-orders/force-app/main/default/objects/Sales_Order__c/fields/Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Value__c</fullName>
    <label>Total Value</label>
    <summarizedField>Sales_Order_Items__c.Value_After_Discount__c</summarizedField>
    <summaryForeignKey>Sales_Order_Items__c.Sales_Order_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>