external-orders/force-app/main/default/objects/Sales_Order__c/fields/Total_Volume_m_3__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume_m_3__c</fullName>
    <inlineHelpText>Total Volume of Sales Order</inlineHelpText>
    <label>Total Volume (m^3)</label>
    <summarizedField>Sales_Order_Items__c.Total_Volume__c</summarizedField>
    <summaryForeignKey>Sales_Order_Items__c.Sales_Order_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>