external-orders/force-app/main/default/objects/Sales_Order__c/fields/True_Value__c.field-meta.xml
<CustomField>
    <fullName>True_Value__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Used by admins to more easily set Process__c flag to true using Jitterbit</description>
    <label>True Value</label>
    <type>Checkbox</type>
</CustomField>