external-orders/force-app/main/default/objects/Sales_Order__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <formula>Text(Year( Created_Date__c )) &amp; &quot;-&quot; &amp;  right(&quot;00&quot; &amp;  Text(Month(Created_Date__c)), 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year-Month</label>
    <type>Text</type>
</CustomField>