external-orders/force-app/main/default/objects/Sales_Order__c/fields/Year_Week__c.field-meta.xml
<CustomField>
    <fullName>Year_Week__c</fullName>
    <description>Date text field for reporting purposes</description>
    <label>Year-Week</label>
    <length>7</length>
    <type>Text</type>
</CustomField>