external-orders/force-app/main/default/objects/Sales_Order__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Created_Date__c</columns>
    <columns>Origin__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Total_Line_Items__c</columns>
    <columns>Total_Order__c</columns>
    <columns>Profit_Centre__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>